<resources>

    <string name="permissions">Permissions</string>
    <string name="SendMessage">Send message</string>
    <string name="Filter">Filter</string>
    <string name="SoundOptions">Transmitter settings</string>
    <string name="ReceiverSettings">Receiver settings</string>
    <string name="app_name">AudioMessenger</string>
    <string name="record">Reception</string>
    <string name="play">Play</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="Set_Hz">Set Hz</string>
    <string name="Set_BandWidth">Set BW</string>
    <string name="Set_BitDuration">Set BD</string>


    <string name="menuMessenger">  Messenger  </string>
    <string name="menuSettings">  Settings  </string>
    <string name="menuInstruction">  Instruction  </string>
    <string name="menuSupportUs"> Support us </string>

    <string name="toMenu">  menu  </string>

    <string name="GetFirstPermission">Mic</string>
    <string name="GetSecondPermission">Storage</string>

    <string name="getPermission">getPermission</string>


    <string name="Transmit">Transmit</string>
    <string name="Receive">Receive</string>

    <string name="Frequency">Frequency</string>
    <string name="BandWidth">BandWidth</string>

    <string name="BitDuration">BitDuration</string>
    <string name="Packets">Data Packets Counter</string>
    <string name="SentPackets">Sent Packets Counter</string>
    <string name="TypeHere">Type your message here</string>

    <string name="MessageHint">Message</string>
    <string name="title_activity_transmitter_settings">TransmitterSettings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>