<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/SendMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/SendMessage"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPermissions"
        tools:layout_editor_absoluteX="20dp">

        <Button
            android:id="@+id/Transmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="stopTransmitting"
            android:text="@string/stop" />

    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/SendMessage"
        android:layout_marginVertical="10dp"
        android:id="@+id/linearLayoutPermissions"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="10dp">

        <EditText
            android:id="@+id/textToTransmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/TypeHere"
            android:inputType="textPersonName" />


    </LinearLayout>


    <LinearLayout
        android:background="@color/MY"
        app:layout_constrainedHeight="true"
        android:orientation="horizontal"
        android:id="@+id/layoutFilterBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintBottom_toTopOf="@id/linearLayout2">
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/layoutFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/progressBar">

        <TextView
            android:id="@+id/Filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SoundOptions"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/sentPacketsCounter"
            tools:layout_editor_absoluteX="10dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/addSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:onClick="addSetting"
            android:text="+"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="toTransmit"
            android:text="@string/Transmit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="toReceive"
            android:text="@string/Receive" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutLV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutFilter"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="10dp"
        app:layout_constrainedHeight="true">

        <ListView
            android:gravity="top"
            android:id="@+id/lvTransmitters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"/>
    </LinearLayout>

    <ProgressBar

        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"/>


</android.support.constraint.ConstraintLayout>