<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <EditText
            android:id="@+id/textFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Frequency"
            android:inputType="number" />

        <Button
            android:id="@+id/buttonFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/Set_Hz" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutBD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/layoutFrequency"
        tools:layout_editor_absoluteX="10dp">

        <EditText
            android:id="@+id/textBD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/BitDuration"
            android:inputType="number" />

        <Button
            android:id="@+id/buttonBD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/Set_BitDuration" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/layoutBD">

        <Button
            android:id="@+id/buttonUseIt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="use it"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="delete"
            android:layout_marginHorizontal="10dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>