<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:outlineAmbientShadowColor="#00FFFFFF"
    android:outlineSpotShadowColor="#00FFFFFF"
    tools:context=".MainMenu">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawablePadding="5dp">


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/ic_action_name"
            android:gravity="left|center"
            android:onClick="toMessenger"
            android:paddingHorizontal="10dp"
            android:drawablePadding="5dp"
            android:text="@string/menuMessenger"
            android:textSize="24dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/button_settings"
            android:gravity="left|center"
            android:onClick="toChatActivity"
            android:paddingHorizontal="10dp"
            android:text="@string/menuSettings"
            android:textSize="24dp"
            android:drawablePadding="5dp"/>

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:autoText="false"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/button_instruction"
            android:freezesText="false"
            android:gravity="left|center"
            android:hyphenationFrequency="normal"
            android:paddingHorizontal="10dp"
            android:text="@string/menuInstruction"
            android:textSize="24dp"
            android:typeface="normal"
            android:drawablePadding="5dp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_background"
            android:drawableLeft="@drawable/button_supportus"
            android:gravity="left|center"
            android:paddingHorizontal="10dp"
            android:text="@string/menuSupportUs"
            android:textSize="24dp"
            android:drawablePadding="5dp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="248dp"
        android:layout_height="171dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />
</android.support.constraint.ConstraintLayout>