<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatMessagesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum = "9" >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/messagesLayout"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="9"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="top">

            <ListView
                android:id="@+id/lvMessages"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="2dp"
                android:choiceMode="singleChoice"
                android:gravity="top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constrainedHeight="true"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/typedLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/textToTransmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TypeHere"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textToTransmit"
                tools:layout_editor_absoluteX="20dp">

                <Button
                    android:id="@+id/Transmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start"
                    android:layout_marginHorizontal="5dp"
                    android:background = "@drawable/button_background"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:onClick="stopTransmitting"
                    android:text="@string/stop"
                    android:background = "@drawable/button_background" />

            </LinearLayout>

            <ProgressBar

                app:layout_constraintTop_toBottomOf="@id/linearLayout"
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>