<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="21">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="Permissions"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <Button
                android:layout_weight="2"
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingHorizontal="5dp"
                android:gravity="left|center"
                android:drawablePadding="5dp"
                android:onClick="getMicPermission"
                android:text="@string/GetFirstPermission"
                android:background="@null"
                android:drawableLeft="@drawable/button_to_mic"
                android:textSize="14sp"/>

            <Button
                android:layout_marginHorizontal="2dp"
                android:layout_weight="2"
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="getStoragePermission"
                android:text="@string/GetSecondPermission"
                android:textSize="14sp"
                android:paddingHorizontal="5dp"
                android:gravity="left|center"
                android:drawablePadding="5dp"
                android:background="@null"
                android:drawableLeft="@drawable/button_to_storage"/>

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <LinearLayout
                android:id="@+id/layoutTransmitterTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:weightSum="3">
                    </LinearLayout>

                    <Button
                        android:id="@+id/toMenuFromSettings"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="24sp"
                        android:background="@color/white"
                        android:onClick="toMenu"
                        android:drawableLeft="@drawable/button_to_menu"
                        style="?android:attr/buttonBarButtonStyle"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/Filter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/SoundOptions"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@+id/sentPacketsCounter"
                    tools:layout_editor_absoluteX="10dp" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:weightSum="3">
                    </LinearLayout>

                        <Button
                            android:id="@+id/addSetting"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:onClick="addTransmitterSetting"
                            android:drawableLeft="@drawable/button_to_add_circle"
                            style="?android:attr/buttonBarButtonStyle"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutLV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:layout_marginBottom="10dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutTransmitterTitle">

                <ListView
                    android:id="@+id/lvTransmitters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp"
                    android:choiceMode="singleChoice"
                    android:gravity="top"/>
            </LinearLayout>


        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <LinearLayout
                android:id="@+id/layoutReceiverTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:weightSum="5">

                <LinearLayout
                    android:id="@+id/layoutReceiverLVBackground"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintTop_toBottomOf="@id/layoutReceiverTitle"
                    app:layout_constraintBottom_toBottomOf="parent">

                </LinearLayout>

                <TextView
                    android:id="@+id/ReceiverTitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/ReceiverSettings"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintTop_toBottomOf="@+id/sentPacketsCounter"
                    tools:layout_editor_absoluteX="10dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:weightSum="3">
                    </LinearLayout>

                    <Button
                        android:id="@+id/addReceiverSetting"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="24sp"
                        android:background="@drawable/roundedbutton"
                        android:onClick="addReceiverSetting"
                        android:drawableLeft="@drawable/button_to_add_circle"
                        style="?android:attr/buttonBarButtonStyle"/>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutLVReceiver"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutReceiverTitle"
                tools:layout_editor_absoluteX="10dp">

                <ListView
                    android:id="@+id/lvReceivers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:choiceMode="singleChoice"
                    android:gravity="top"/>
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>